--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,3 +1,4 @@
+m4trace:configure.in:4: -1- AC_PREREQ([2.69])
 m4trace:configure.in:5: -1- AC_INIT([JHttpServer], [0.0.1], [wuyouqiangxihuan@163.com])
 m4trace:configure.in:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:5: -1- m4_pattern_forbid([_AC_])
@@ -147,6 +148,7 @@ m4trace:configure.in:5: -1- AC_SUBST([target_alias])
 m4trace:configure.in:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.in:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.in:6: -1- AM_INIT_AUTOMAKE([JHttpServer], [0.0.1])
+m4trace:configure.in:6: -1- AC_PREREQ([2.62])
 m4trace:configure.in:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.in:6: -1- AM_AUTOMAKE_VERSION([1.11.6])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
@@ -180,6 +182,7 @@ m4trace:configure.in:6: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.in:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.in:6: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 @%:@undef VERSION])
+m4trace:configure.in:6: -1- AC_PREREQ([2.50])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.in:6: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([ACLOCAL])
@@ -205,6 +208,7 @@ m4trace:configure.in:6: -1- m4_pattern_allow([^STRIP$])
 m4trace:configure.in:6: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:6: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
+m4trace:configure.in:6: -1- AC_PREREQ([2.60])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.in:6: -1- AC_SUBST([MKDIR_P])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([MKDIR_P])
@@ -231,6 +235,7 @@ m4trace:configure.in:6: -1- AC_SUBST([am__untar])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.in:6: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.in:8: -1- AC_CONFIG_HEADERS([config.h])
+m4trace:configure.in:11: -1- AC_PROG_CC
 m4trace:configure.in:11: -1- AC_SUBST([CC])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.in:11: -1- m4_pattern_allow([^CC$])
@@ -277,6 +282,7 @@ m4trace:configure.in:11: -1- AC_SUBST([am__quote])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([am__quote])
 m4trace:configure.in:11: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.in:11: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.in:11: -1- AC_PREREQ([2.52])
 m4trace:configure.in:11: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([AMDEP_TRUE])
 m4trace:configure.in:11: -1- m4_pattern_allow([^AMDEP_TRUE$])
@@ -299,6 +305,7 @@ m4trace:configure.in:11: -1- m4_pattern_allow([^CCDEPMODE$])
 m4trace:configure.in:11: -1- AM_CONDITIONAL([am__fastdepCC], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
+m4trace:configure.in:11: -1- AC_PREREQ([2.52])
 m4trace:configure.in:11: -1- AC_SUBST([am__fastdepCC_TRUE])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
 m4trace:configure.in:11: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
@@ -307,113 +314,40 @@ m4trace:configure.in:11: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.in:11: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.in:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.in:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-@%:@undef HAVE_STRING_H])
-m4trace:configure.in:16: -1- AC_SUBST([CPP])
-m4trace:configure.in:16: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.in:16: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.in:16: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.in:16: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.in:16: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.in:16: -1- AC_SUBST([CPP])
-m4trace:configure.in:16: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.in:16: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.in:16: -1- AC_SUBST([GREP])
-m4trace:configure.in:16: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.in:16: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.in:16: -1- AC_SUBST([EGREP])
-m4trace:configure.in:16: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.in:16: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.in:16: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
-m4trace:configure.in:16: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.in:16: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
-@%:@undef STDC_HEADERS])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
-@%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
-@%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-@%:@undef HAVE_STRING_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-@%:@undef HAVE_MEMORY_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
-@%:@undef HAVE_STRINGS_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
-@%:@undef HAVE_INTTYPES_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
-@%:@undef HAVE_STDINT_H])
-m4trace:configure.in:16: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
-@%:@undef HAVE_UNISTD_H])
-m4trace:configure.in:20: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.in:20: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDLIB_H])
-m4trace:configure.in:20: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.in:20: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
-m4trace:configure.in:20: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.in:20: -1- AH_OUTPUT([HAVE_MALLOC], [/* Define to 1 if your system has a GNU libc compatible `malloc\' function, and
-   to 0 otherwise. */
-@%:@undef HAVE_MALLOC])
-m4trace:configure.in:20: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
-m4trace:configure.in:20: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.in:20: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS malloc.$ac_objext"])
-m4trace:configure.in:20: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.in:20: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:20: -1- AC_LIBSOURCE([malloc.c])
-m4trace:configure.in:20: -1- AC_DEFINE_TRACE_LITERAL([malloc])
-m4trace:configure.in:20: -1- m4_pattern_allow([^malloc$])
-m4trace:configure.in:20: -1- AH_OUTPUT([malloc], [/* Define to rpl_malloc if the replacement function should be used. */
-@%:@undef malloc])
-m4trace:configure.in:21: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-@%:@undef HAVE_STDLIB_H])
-m4trace:configure.in:21: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDLIB_H])
-m4trace:configure.in:21: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.in:21: -1- AC_DEFINE_TRACE_LITERAL([HAVE_REALLOC])
-m4trace:configure.in:21: -1- m4_pattern_allow([^HAVE_REALLOC$])
-m4trace:configure.in:21: -1- AH_OUTPUT([HAVE_REALLOC], [/* Define to 1 if your system has a GNU libc compatible `realloc\' function,
-   and to 0 otherwise. */
-@%:@undef HAVE_REALLOC])
-m4trace:configure.in:21: -1- AC_DEFINE_TRACE_LITERAL([HAVE_REALLOC])
-m4trace:configure.in:21: -1- m4_pattern_allow([^HAVE_REALLOC$])
-m4trace:configure.in:21: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS realloc.$ac_objext"])
-m4trace:configure.in:21: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.in:21: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:21: -1- AC_LIBSOURCE([realloc.c])
-m4trace:configure.in:21: -1- AC_DEFINE_TRACE_LITERAL([realloc])
-m4trace:configure.in:21: -1- m4_pattern_allow([^realloc$])
-m4trace:configure.in:21: -1- AH_OUTPUT([realloc], [/* Define to rpl_realloc if the replacement function should be used. */
-@%:@undef realloc])
-m4trace:configure.in:22: -1- AH_OUTPUT([HAVE_MEMSET], [/* Define to 1 if you have the `memset\' function. */
-@%:@undef HAVE_MEMSET])
-m4trace:configure.in:22: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MEMSET])
-m4trace:configure.in:22: -1- m4_pattern_allow([^HAVE_MEMSET$])
-m4trace:configure.in:24: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.in:25: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.in:25: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:25: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.in:25: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.in:25: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.in:25: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.in:25: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.in:25: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.in:25: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.in:25: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.in:25: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.in:25: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.in:15: -1- AH_OUTPUT([HAVE_LIBEVENT], [/* Define to 1 if you have the `event\' library (-levent). */
+@%:@undef HAVE_LIBEVENT])
+m4trace:configure.in:15: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBEVENT])
+m4trace:configure.in:15: -1- m4_pattern_allow([^HAVE_LIBEVENT$])
+m4trace:configure.in:17: -1- AH_OUTPUT([HAVE_LIBPTHREAD], [/* Define to 1 if you have the `pthread\' library (-lpthread). */
+@%:@undef HAVE_LIBPTHREAD])
+m4trace:configure.in:17: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBPTHREAD])
+m4trace:configure.in:17: -1- m4_pattern_allow([^HAVE_LIBPTHREAD$])
+m4trace:configure.in:25: -1- AC_CONFIG_FILES([Makefile
+                 src/Makefile])
+m4trace:configure.in:27: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.in:27: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.in:27: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.in:27: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.in:27: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.in:27: -1- AC_PREREQ([2.52])
+m4trace:configure.in:27: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.in:27: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.in:27: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.in:27: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.in:27: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.in:27: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.in:27: -1- AC_SUBST_TRACE([MKDIR_P])
