--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,4 +1,3 @@
-m4trace:configure.in:4: -1- AC_PREREQ([2.69])
 m4trace:configure.in:5: -1- AC_INIT([JHttpServer], [0.0.1], [wuyouqiangxihuan@163.com])
 m4trace:configure.in:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:5: -1- m4_pattern_forbid([_AC_])
@@ -148,9 +147,8 @@ m4trace:configure.in:5: -1- AC_SUBST([target_alias])
 m4trace:configure.in:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.in:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.in:6: -1- AM_INIT_AUTOMAKE([JHttpServer], [0.0.1])
-m4trace:configure.in:6: -1- AC_PREREQ([2.62])
 m4trace:configure.in:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.in:6: -1- AM_AUTOMAKE_VERSION([1.11.6])
+m4trace:configure.in:6: -1- AM_AUTOMAKE_VERSION([1.13.3])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.in:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -168,6 +166,8 @@ m4trace:configure.in:6: -1- _AM_SUBST_NOTMAKE([am__isrc])
 m4trace:configure.in:6: -1- AC_SUBST([CYGPATH_W])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([CYGPATH_W])
 m4trace:configure.in:6: -1- m4_pattern_allow([^CYGPATH_W$])
+m4trace:configure.in:6: -1- _m4_warn([obsolete], [AM_INIT_AUTOMAKE: two- and three-arguments forms are deprecated.], [aclocal.m4:432: AM_INIT_AUTOMAKE is expanded from...
+configure.in:6: the top level])
 m4trace:configure.in:6: -1- AC_SUBST([PACKAGE], [JHttpServer])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.in:6: -1- m4_pattern_allow([^PACKAGE$])
@@ -182,7 +182,6 @@ m4trace:configure.in:6: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.in:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.in:6: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 @%:@undef VERSION])
-m4trace:configure.in:6: -1- AC_PREREQ([2.50])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.in:6: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([ACLOCAL])
@@ -208,12 +207,11 @@ m4trace:configure.in:6: -1- m4_pattern_allow([^STRIP$])
 m4trace:configure.in:6: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.in:6: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
-m4trace:configure.in:6: -1- AC_PREREQ([2.60])
 m4trace:configure.in:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.in:6: -1- AC_SUBST([MKDIR_P])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([MKDIR_P])
 m4trace:configure.in:6: -1- m4_pattern_allow([^MKDIR_P$])
-m4trace:configure.in:6: -1- AC_SUBST([mkdir_p], ["$MKDIR_P"])
+m4trace:configure.in:6: -1- AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.in:6: -1- m4_pattern_allow([^mkdir_p$])
 m4trace:configure.in:6: -1- AC_SUBST([AWK])
@@ -234,8 +232,23 @@ m4trace:configure.in:6: -1- m4_pattern_allow([^am__tar$])
 m4trace:configure.in:6: -1- AC_SUBST([am__untar])
 m4trace:configure.in:6: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.in:6: -1- m4_pattern_allow([^am__untar$])
+m4trace:configure.in:6: -1- AM_SILENT_RULES
+m4trace:configure.in:6: -1- AC_SUBST([AM_V])
+m4trace:configure.in:6: -1- AC_SUBST_TRACE([AM_V])
+m4trace:configure.in:6: -1- m4_pattern_allow([^AM_V$])
+m4trace:configure.in:6: -1- _AM_SUBST_NOTMAKE([AM_V])
+m4trace:configure.in:6: -1- AC_SUBST([AM_DEFAULT_V])
+m4trace:configure.in:6: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
+m4trace:configure.in:6: -1- m4_pattern_allow([^AM_DEFAULT_V$])
+m4trace:configure.in:6: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
+m4trace:configure.in:6: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
+m4trace:configure.in:6: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
+m4trace:configure.in:6: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
+m4trace:configure.in:6: -1- AC_SUBST([AM_BACKSLASH])
+m4trace:configure.in:6: -1- AC_SUBST_TRACE([AM_BACKSLASH])
+m4trace:configure.in:6: -1- m4_pattern_allow([^AM_BACKSLASH$])
+m4trace:configure.in:6: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.in:8: -1- AC_CONFIG_HEADERS([config.h])
-m4trace:configure.in:11: -1- AC_PROG_CC
 m4trace:configure.in:11: -1- AC_SUBST([CC])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.in:11: -1- m4_pattern_allow([^CC$])
@@ -282,7 +295,6 @@ m4trace:configure.in:11: -1- AC_SUBST([am__quote])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([am__quote])
 m4trace:configure.in:11: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.in:11: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.in:11: -1- AC_PREREQ([2.52])
 m4trace:configure.in:11: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([AMDEP_TRUE])
 m4trace:configure.in:11: -1- m4_pattern_allow([^AMDEP_TRUE$])
@@ -305,7 +317,6 @@ m4trace:configure.in:11: -1- m4_pattern_allow([^CCDEPMODE$])
 m4trace:configure.in:11: -1- AM_CONDITIONAL([am__fastdepCC], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
-m4trace:configure.in:11: -1- AC_PREREQ([2.52])
 m4trace:configure.in:11: -1- AC_SUBST([am__fastdepCC_TRUE])
 m4trace:configure.in:11: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
 m4trace:configure.in:11: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
@@ -331,7 +342,6 @@ m4trace:configure.in:27: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
 m4trace:configure.in:27: -1- AC_SUBST_TRACE([LTLIBOBJS])
 m4trace:configure.in:27: -1- m4_pattern_allow([^LTLIBOBJS$])
 m4trace:configure.in:27: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.in:27: -1- AC_PREREQ([2.52])
 m4trace:configure.in:27: -1- AC_SUBST([am__EXEEXT_TRUE])
 m4trace:configure.in:27: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
 m4trace:configure.in:27: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
