--- a/autom4te.cache/output.3
+++ b/autom4te.cache/output.3
@@ -584,6 +584,7 @@ PACKAGE_STRING='JHttpServer 0.0.1'
 PACKAGE_BUGREPORT='wuyouqiangxihuan@163.com'
 PACKAGE_URL=''
 
+ac_default_prefix=/usr/local
 ac_unique_file="config.h.in"
 ac_subst_vars='am__EXEEXT_FALSE
 am__EXEEXT_TRUE
@@ -2344,9 +2345,8 @@ fi
 
 
 # Define the identity of the package.
-
- PACKAGE=JHttpServer
- VERSION=0.0.1
+ PACKAGE='jhttpserver'
+ VERSION='0.0.1'
 
 
 cat >>confdefs.h <<_ACEOF
@@ -2395,6 +2395,10 @@ am__tar='$${TAR-tar} chof - "$$tardir"' am__untar='$${TAR-tar} xf -'
 
 
 
+
+
+
+# To install locally
 
 
 
@@ -3384,48 +3388,7 @@ fi
 
 
 # Checks for libraries.
-# FIXME: Replace `main' with a function in `-levent':
 
-{ $as_echo "$as_me:${as_lineno-$LINENO}: checking for main in -levent" >&5
-$as_echo_n "checking for main in -levent... " >&6; }
-if ${ac_cv_lib_event_main+:} false; then :
-  $as_echo_n "(cached) " >&6
-else
-  ac_check_lib_save_LIBS=$LIBS
-LIBS="-levent  $LIBS"
-cat confdefs.h - <<_ACEOF >conftest.$ac_ext
-/* end confdefs.h.  */
-
-
-int
-main ()
-{
-return main ();
-  ;
-  return 0;
-}
-_ACEOF
-if ac_fn_c_try_link "$LINENO"; then :
-  ac_cv_lib_event_main=yes
-else
-  ac_cv_lib_event_main=no
-fi
-rm -f core conftest.err conftest.$ac_objext \
-    conftest$ac_exeext conftest.$ac_ext
-LIBS=$ac_check_lib_save_LIBS
-fi
-{ $as_echo "$as_me:${as_lineno-$LINENO}: result: $ac_cv_lib_event_main" >&5
-$as_echo "$ac_cv_lib_event_main" >&6; }
-if test "x$ac_cv_lib_event_main" = xyes; then :
-  cat >>confdefs.h <<_ACEOF
-@%:@define HAVE_LIBEVENT 1
-_ACEOF
-
-  LIBS="-levent $LIBS"
-
-fi
-
-# FIXME: Replace `main' with a function in `-lpthread':
 { $as_echo "$as_me:${as_lineno-$LINENO}: checking for main in -lpthread" >&5
 $as_echo_n "checking for main in -lpthread... " >&6; }
 if ${ac_cv_lib_pthread_main+:} false; then :
